k8s/group-5-fallback-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: group-5-fallback-routes
  namespace: group-5
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gateway
          port: 8080
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /api
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /group-5/api

    - backendRefs:
        - group: ""
          kind: Service
          name: group-5-service
          port: 80
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /group-5
