k8s/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: group-5-http-redirect
  namespace: group-5
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: default
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /group-5
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
