k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: group-5-route
  namespace: group-5
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /group-5/api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: gateway
          port: 8080
          weight: 1

    - matches:
        - path:
            type: PathPrefix
            value: /group-5
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: ""
          kind: Service
          name: group-5-service
          port: 80
          weight: 1
