k8s/postgres.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: minisiem-postgres-pvc
spec:
  storageClassName: csi-cinder-work
  accessModes: ["ReadWriteOnce"]
  resources:
    requests:
      storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minisiem-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minisiem-postgres
  template:
    metadata:
      labels:
        app: minisiem-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          env:
            - name: POSTGRES_DB
              value: "minisiem"
            - name: POSTGRES_USER
              value: "minisiem"
            - name: POSTGRES_PASSWORD
              value: "minisiem"
            - name: PGDATA
              value: "/var/lib/postgresql/data/pgdata"
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minisiem-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minisiem-postgres
spec:
  selector:
    app: minisiem-postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
