k8s/ssh-jumphost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-jumphost
  namespace: group-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssh-jumphost
  template:
    metadata:
      labels:
        app: ssh-jumphost
    spec:
      containers:
        - name: ssh
          image: linuxserver/openssh-server:latest
          env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: PUBLIC_KEY
              value: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIB/N9QhdRsv4hU7sP6idsr8hDM4WUvU6ZcKDvg48B8t1 cyske@cyske-lab-honeypot"
            - name: USER_NAME
              value: "tunnel"
          ports:
            - containerPort: 2222
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-jumphost
  namespace: group-5
spec:
  type: NodePort
  selector:
    app: ssh-jumphost
  ports:
    - port: 2222
      targetPort: 2222
      nodePort: 30022
